@@ -1,4 +1,4 @@
 #! /bin/bash
 
 # Count lines of code for Miosix
-find . | grep -E "\\.c|\\.cpp|\\.h" | xargs -d \\n cat | wc -l
+find . | grep -E "\\.c$|\\.cpp$|\\.h$" | xargs -d \\n cat | wc -l
